feat:add fight page

--- a/home.html
+++ b/home.html
@@ -12,7 +12,7 @@
   <div class="container_home">
     <header class="header_home">
       <div class="home_page">
-        <span>Main</span>
+        <span class="page-name" id="pageName">Main</span>
       </div>
       <nav class="header_nav">
         <ul>
