--- a/registration.html
+++ b/registration.html
@@ -17,11 +17,11 @@
       <input class="charactername-input" type="text" name="charactername" id="charactername"
         placeholder="Enter your Character Name">
     </div>
-    <a href="home.html">
-      <button class="registration_btn">Create Character</button>
-    </a>
-  </div>
 
+    <button onclick="saveName()" class="registration_btn">Create Character</button>
+
+  </div>
+  <script src="script.js"></script>
 </body>
 
 </html>
